Generate SDK files
Signed-off-by: Moti Asayag <masayag@redhat.com>